--- a/src/style.css
+++ b/src/style.css
@@ -16,7 +16,7 @@
     --radius-lg:16px;
 
     --sidebar-w: 15rem;   /* ancho de la barra lateral (ajusta 190/200/220) */
-    --content-pl: 0px;   /* padding izquierdo del contenido (ajusta 0/8/12) */
+    --content-pl: 0;   /* padding izquierdo del contenido (ajusta 0/8/12) */
 }
 
 *{ box-sizing:border-box; }
@@ -77,12 +77,10 @@ body{
     top: 0;
     z-index: 10;
     background:#fff;
-
-    padding-left: var(--content-pl) !important;
 }
 /* ===== Main ===== */
 .main{
-    padding:24px 30px 38 px var(--content-pl);
+    padding: 24px 30px 38px 30px;
     background:#fff;
 }
 .section-title{
